Report install package readiness
